force-app/main/default/objects/Success_Resource__c/Success_Resource__c.object-meta.xml
<CustomObject>
    <label>Success Resource</label>
    <nameField>
        <displayFormat>SR-{0}</displayFormat>
        <label>Success Resource ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Success Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>