force-app/main/default/objects/Success_Resource__c/fields/AgentID__c.field-meta.xml
<CustomField>
    <fullName>AgentID__c</fullName>
    <description>inContact Agent Id</description>
    <label>AgentID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>