force-app/main/default/objects/Success_Resource__c/fields/Appointment_Link__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Link__c</fullName>
    <description>[Ed Plus Integration] Field will be populated by imports managed by EdPlus</description>
    <inlineHelpText>Field will be populated by imports managed by EdPlus</inlineHelpText>
    <label>Appointment Link</label>
    <type>Url</type>
</CustomField>