force-app/main/default/objects/Success_Resource__c/fields/Assign_New_Students__c.field-meta.xml
<CustomField>
    <fullName>Assign_New_Students__c</fullName>
    <businessOwnerGroup>Data_Owner_Ed_Plus</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>[Ed Plus Success Coaches / Success Portal Managers] - A user-managed boolean field used when determining new Success Student assignments.</description>
    <inlineHelpText>Should this Success Resource get more students?</inlineHelpText>
    <label>Assign New Students</label>
    <type>Checkbox</type>
</CustomField>