force-app/main/default/objects/Success_Resource__c/fields/ASURiteID__c.field-meta.xml
<CustomField>
    <fullName>ASURiteID__c</fullName>
    <description>Formula field that displays the Alias field on the User object</description>
    <formula>Resource__r.Alias</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ASURITE</label>
    <type>Text</type>
</CustomField>