force-app/main/default/objects/Success_Resource__c/fields/Committee_Code__c.field-meta.xml
<CustomField>
    <fullName>Committee_Code__c</fullName>
    <formula>Success_Pod__r.Committee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Committee Code</label>
    <type>Text</type>
</CustomField>