force-app/main/default/objects/Success_Resource__c/fields/Delegated_Coach_Resource_ID__c.field-meta.xml
<CustomField>
    <fullName>Delegated_Coach_Resource_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to help manage coverage for a coach that is no longer with the Success Center until they can be replaced. This field is sourced by users choosing Success Resource Id names</description>
    <inlineHelpText>Used to help manage coverage for a coach that is no longer with the Success Center until they can be replaced</inlineHelpText>
    <label>Delegated Coach Resource ID</label>
    <referenceTo>Success_Resource__c</referenceTo>
    <relationshipLabel>Success Resources</relationshipLabel>
    <relationshipName>Success_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>