force-app/main/default/objects/Success_Resource__c/fields/Delegated_Resource__c.field-meta.xml
<CustomField>
    <fullName>Delegated_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delegated Resource</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Success_Resources1</relationshipName>
    <type>Lookup</type>
</CustomField>