force-app/main/default/objects/Success_Resource__c/fields/Delegated_Resource_Appointment_Link__c.field-meta.xml
<CustomField>
    <fullName>Delegated_Resource_Appointment_Link__c</fullName>
    <description>Appointment Link of the delegated success resource.  This is a URL that links to the user's specific Calendly account.  This data is sourced from the Success Resource record</description>
    <formula>Delegated_Coach_Resource_ID__r.Appointment_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delegated Resource Appointment Link</label>
    <type>Text</type>
</CustomField>