force-app/main/default/objects/Success_Resource__c/fields/Delegated_Resource_Email__c.field-meta.xml
<CustomField>
    <fullName>Delegated_Resource_Email__c</fullName>
    <description>The ASU email address of the delegated success resource.  This data is sourced from the Success Resource record</description>
    <formula>Delegated_Coach_Resource_ID__r.Primary_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delegated Resource Email</label>
    <type>Text</type>
</CustomField>