force-app/main/default/objects/Success_Resource__c/fields/Delegated_Resource_EMPLID__c.field-meta.xml
<CustomField>
    <fullName>Delegated_Resource_EMPLID__c</fullName>
    <description>The EMPLID of the delegated success resource.  This data is sourced from the Success Resource record</description>
    <formula>Delegated_Coach_Resource_ID__r.EMPLID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delegated Resource EMPLID</label>
    <type>Text</type>
</CustomField>