force-app/main/default/objects/Success_Resource__c/fields/Delegated_Resource_Segmentation_Type__c.field-meta.xml
<CustomField>
    <fullName>Delegated_Resource_Segmentation_Type__c</fullName>
    <description>The segment/specialization of the delegated success resource.  This data is sourced from the Success Resource record</description>
    <formula>TEXT(Delegated_Coach_Resource_ID__r.Segmentation_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delegated Resource Segmentation Type</label>
    <type>Text</type>
</CustomField>