force-app/main/default/objects/Success_Resource__c/fields/Delegated_Success_Resource_ID__c.field-meta.xml
<CustomField>
    <fullName>Delegated_Success_Resource_ID__c</fullName>
    <description>15-digit SF record ID for the delegated success resource.  This data is sourced from the Success Resource record</description>
    <formula>Delegated_Coach_Resource_ID__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delegated Success Resource ID</label>
    <type>Text</type>
</CustomField>