force-app/main/default/objects/Success_Resource__c/fields/Delegated_UserId__c.field-meta.xml
<CustomField>
    <fullName>Delegated_UserId__c</fullName>
    <formula>Delegated_Resource__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delegated UserId</label>
    <type>Text</type>
</CustomField>