force-app/main/default/objects/Success_Resource__c/fields/EMPLID__c.field-meta.xml
<CustomField>
    <fullName>EMPLID__c</fullName>
    <formula>Resource__r.EmployeeNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EMPLID</label>
    <type>Text</type>
</CustomField>