force-app/main/default/objects/Success_Resource__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Person is available to be assigned Success Students</description>
    <label>Active Resource</label>
    <type>Checkbox</type>
</CustomField>