force-app/main/default/objects/Success_Resource__c/fields/Military_Coach__c.field-meta.xml
<CustomField>
    <fullName>Military_Coach__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this field identifies the Success Resource assigned to Coaching Military Students</description>
    <label>Military Coach</label>
    <type>Checkbox</type>
</CustomField>