force-app/main/default/objects/Success_Resource__c/fields/Plan_Code__c.field-meta.xml
<CustomField>
    <fullName>Plan_Code__c</fullName>
    <label>Plan Code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ARPUPBSP</fullName>
            </value>
            <value>
                <fullName>ASFPSYMS</fullName>
            </value>
            <value>
                <fullName>ASPGSBA</fullName>
            </value>
            <value>
                <fullName>ASPGSBS</fullName>
            </value>
            <value>
                <fullName>ASPGSFPBA</fullName>
            </value>
            <value>
                <fullName>ASPGSFPBS</fullName>
            </value>
            <value>
                <fullName>ASPGSMS</fullName>
            </value>
            <value>
                <fullName>BABDABS</fullName>
            </value>
            <value>
                <fullName>BABUSBABA</fullName>
            </value>
            <value>
                <fullName>BABUSCBA</fullName>
            </value>
            <value>
                <fullName>BABUSFIMBA</fullName>
            </value>
            <value>
                <fullName>BABUSGBA</fullName>
            </value>
            <value>
                <fullName>BABUSGLBA</fullName>
            </value>
            <value>
                <fullName>BABUSRBA</fullName>
            </value>
            <value>
                <fullName>BABUSSBA</fullName>
            </value>
            <value>
                <fullName>BABUSTBA</fullName>
            </value>
            <value>
                <fullName>BACMRMS</fullName>
            </value>
            <value>
                <fullName>BAFIMBS</fullName>
            </value>
            <value>
                <fullName>BAMGTBS</fullName>
            </value>
            <value>
                <fullName>BAMKTBS</fullName>
            </value>
            <value>
                <fullName>CSBSJMS</fullName>
            </value>
            <value>
                <fullName>CSMCMSTBA</fullName>
            </value>
            <value>
                <fullName>ECNTRCBS</fullName>
            </value>
            <value>
                <fullName>ECNTRDMS</fullName>
            </value>
            <value>
                <fullName>ECNTRMBS</fullName>
            </value>
            <value>
                <fullName>EDDCIMED</fullName>
            </value>
            <value>
                <fullName>EDESLMA</fullName>
            </value>
            <value>
                <fullName>EDSLSTBAE</fullName>
            </value>
            <value>
                <fullName>EDSPEGRCA</fullName>
            </value>
            <value>
                <fullName>EDTECHMED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>