force-app/main/default/objects/Success_Resource__c/fields/Program_Code__c.field-meta.xml
<CustomField>
    <fullName>Program_Code__c</fullName>
    <description>Used to tie an Advisor Manager to multiple PODs (Queues) for viewing as access. One of these values must match a value in a POD's Program__c field.</description>
    <inlineHelpText>Used to tie an Advisor Manager to multiple PODs (Queues) for viewing as access. One of these values must match a value in a POD's Program__c field.</inlineHelpText>
    <label>Program Code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UGAS</fullName>
            </value>
            <value>
                <fullName>UGBA</fullName>
            </value>
            <value>
                <fullName>UGCS</fullName>
            </value>
            <value>
                <fullName>UGES</fullName>
            </value>
            <value>
                <fullName>UGFA</fullName>
            </value>
            <value>
                <fullName>UGLA</fullName>
            </value>
            <value>
                <fullName>UGLS</fullName>
            </value>
            <value>
                <fullName>UGNH</fullName>
            </value>
            <value>
                <fullName>UGNU</fullName>
            </value>
            <value>
                <fullName>UGPP</fullName>
            </value>
            <value>
                <fullName>UGSU</fullName>
            </value>
            <value>
                <fullName>UGTE</fullName>
            </value>
            <value>
                <fullName>UGHI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>