force-app/main/default/objects/Success_Resource__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Coach's Name. Probable future use for other Portal Users.</description>
    <label>Resource</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Success_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>