force-app/main/default/objects/Success_Resource__c/fields/Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Resource_Name__c</fullName>
    <formula>Resource__r.FirstName &amp; ' ' &amp; Resource__r.LastName</formula>
    <label>Resource Name</label>
    <type>Text</type>
</CustomField>