force-app/main/default/objects/Success_Resource__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Resource Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
                <default>true</default>
                <label>User</label>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>College Outreach</fullName>
            </value>
            <value>
                <fullName>Dean</fullName>
            </value>
            <value>
                <fullName>Provost</fullName>
            </value>
            <value>
                <fullName>Department Manager</fullName>
            </value>
            <value>
                <fullName>College Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>