force-app/main/default/objects/Success_Resource__c/fields/Secondary_Phone__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Phone__c</fullName>
    <label>Secondary Phone</label>
    <type>Phone</type>
</CustomField>