force-app/main/default/objects/Success_Resource__c/fields/Segmentation_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Segmentation_Sub_Type__c</fullName>
    <businessOwnerGroup>Data_Owner_Ed_Plus</businessOwnerGroup>
    <description>For Ed Plus communication in Marketing Cloud</description>
    <label>Segmentation Sub Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>