force-app/main/default/objects/Success_Resource__c/fields/Segmentation_Type__c.field-meta.xml
<CustomField>
    <fullName>Segmentation_Type__c</fullName>
    <businessOwnerGroup>Data_Owner_Ed_Plus</businessOwnerGroup>
    <description>For Ed Plus communication in Marketing Cloud</description>
    <label>Segmentation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core GRAD</fullName>
            </value>
            <value>
                <fullName>Core UGRD</fullName>
            </value>
            <value>
                <fullName>Corp Part GRAD</fullName>
            </value>
            <value>
                <fullName>Corp Part UGRD</fullName>
            </value>
            <value>
                <fullName>Coverage</fullName>
            </value>
            <value>
                <fullName>FIS</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Military GRAD</fullName>
            </value>
            <value>
                <fullName>Military UGRD</fullName>
            </value>
            <value>
                <fullName>New Hire</fullName>
            </value>
            <value>
                <fullName>Reentry</fullName>
            </value>
            <value>
                <fullName>Starbucks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>