force-app/main/default/objects/Success_Resource__c/fields/Success_Pod__c.field-meta.xml
<CustomField>
    <fullName>Success_Pod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Child object to Success Pod</description>
    <label>Success Pod</label>
    <referenceTo>Success_Pod__c</referenceTo>
    <relationshipLabel>Success Resources</relationshipLabel>
    <relationshipName>Success_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>