force-app/main/default/objects/Success_Resource__c/recordTypes/Career_Coach.recordType-meta.xml
<RecordType>
    <fullName>Career_Coach</fullName>
    <active>true</active>
    <description>Used to denote if the Success Resource is a Career Coach for Ed Plus Success Coaches.</description>
    <label>Career Coach</label>
</RecordType>