force-app/main/default/objects/Success_Resource__c/validationRules/Resource_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Resource_Required</fullName>
    <active>true</active>
    <description>The resource field must be populated to save the record on Advisor Record Types.</description>
    <errorConditionFormula>AND(
RecordType.Name = 'Advisor',
ISBLANK(Resource__c) 
)</errorConditionFormula>
    <errorDisplayField>Resource__c</errorDisplayField>
    <errorMessage>You must fill out the Resource field in order to save the Success Resource.</errorMessage>
</ValidationRule>