force-app/main/default/objects/Success_Resource__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>AgentID__c</columns>
    <columns>Committee_Code__c</columns>
    <columns>Delegated_Resource__c</columns>
    <columns>Military_Coach__c</columns>
    <columns>Resource__c</columns>
    <columns>Role__c</columns>
    <columns>Plan_Code__c</columns>
    <columns>Primary_Email__c</columns>
    <columns>Primary_Phone__c</columns>
    <columns>Program_Code__c</columns>
    <columns>Success_Pod__c</columns>
    <columns>UserId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>