force-app/main/default/objects/Success_Resource__c/listViews/All_Resources_with_Details.listView-meta.xml
<ListView>
    <fullName>All_Resources_with_Details</fullName>
    <columns>NAME</columns>
    <columns>Success_Pod__c</columns>
    <columns>Resource__c</columns>
    <columns>IsActive__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Role__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All Resources with Details</label>
</ListView>