force-app/main/default/objects/Success_Resource__c/listViews/Success_Resources_Active_Advisors.listView-meta.xml
<ListView>
    <fullName>Success_Resources_Active_Advisors</fullName>
    <booleanFilter>(1 AND 2) OR 3</booleanFilter>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>Resource__c</columns>
    <columns>Program_Code__c</columns>
    <columns>Success_Pod__c</columns>
    <columns>Role__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Primary_Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Success_Resource__c.Advisor</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
    </filters>
    <label>Success Resources - Active Advisors</label>
</ListView>