force-app/main/default/objects/Success_Resource__c/listViews/Success_Resources_Advisors.listView-meta.xml
<ListView>
    <fullName>Success_Resources_Advisors</fullName>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>Resource__c</columns>
    <columns>Role__c</columns>
    <columns>Military_Coach__c</columns>
    <columns>Committee_Code__c</columns>
    <columns>Success_Pod__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Success_Resource__c.Advisor</value>
    </filters>
    <label>Success Resources - Advisors</label>
</ListView>