force-app/main/default/objects/Success_Resource__c/listViews/Success_Resources_Coaches.listView-meta.xml
<ListView>
    <fullName>Success_Resources_Coaches</fullName>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>Resource__c</columns>
    <columns>AgentID__c</columns>
    <columns>Success_Pod__c</columns>
    <columns>Delegated_Resource__c</columns>
    <columns>Military_Coach__c</columns>
    <columns>Role__c</columns>
    <columns>Program_Code__c</columns>
    <columns>Plan_Code__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Success_Resource__c.Coach</value>
    </filters>
    <label>Success Resources - Coaches</label>
</ListView>