force-app/main/default/objects/Success_Resource__c/listViews/Success_Resources_DelegatedCoaches.listView-meta.xml
<ListView>
    <fullName>Success_Resources_DelegatedCoaches</fullName>
    <columns>NAME</columns>
    <columns>Resource__c</columns>
    <columns>Delegated_Resource__c</columns>
    <columns>Plan_Code__c</columns>
    <columns>Military_Coach__c</columns>
    <columns>Success_Pod__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Success_Resource__c.Coach</value>
    </filters>
    <filters>
        <field>Delegated_Resource__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Success Resources - DelegatedCoaches</label>
</ListView>